[package]
name = "gx1convert"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gx1convert"
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.4.3"
polars = {version = "0.30.0", features= [
  "docs",
  "zip_with",
  "temporal",
  "fmt",
  "dtype-slim",
  "parquet"
]}
pyo3 = "0.19.0"
regex = "1.8.4"
